--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <a href="http://google.com/+" class="btn btn-social-icon btn-google"><i class="fa fa-google-plus fa-lg"></i></a>
                         <a href="http://www.facebook.com/profile.php?id=" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook fa-lg"></i></a>
                         <a href="http://www.linkedin.com/in/" class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin fa-lg"></i></a>
-                        <a href="http://twitter.com/"><i class="fa fa-twitter fa-lg" class="btn btn-social-icon btn-twitter"></i></a>
-                        <a href="http://youtube.com/"><i class="fa fa-youtube fa-lg" class="btn btn-social-icon btn-youtube"></i></a>
+                        <a href="http://twitter.com/" class="btn btn-social-icon btn-twitter"><i class="fa fa-twitter fa-lg" class="btn btn-social-icon btn-twitter"></i></a>
+                        <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube fa-lg" class="btn btn-social-icon btn-youtube"></i></a>
                         <a href="mailto:" class="btn btn-social-icon"><i class="fa fa-envelope-o fa-lg"></i></a>
                     </div>
                 </div>
